# SMS-SERVICE

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.consumer  Dockerfile.sms-server  README.md  docker-compose.yml  start-sms-server.bat  start-sms-server.sh
.cargo/: config.toml
src/: ai_service.rs  app_config.rs  broker_config.rs  consumers.rs  lib.rs  main.rs  message_broker.rs  models.rs  signalwire.rs  sms_server.rs  store.rs  zero_copy.rs
src/consumer/: main.rs
src/infra/: iggy.rs  mod.rs
src/producer/: main.rs
