[package]
name = "conversation-store"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "conversation-store"
path = "src/main.rs"

[[bin]]
name = "sms-server"
path = "src/sms_server.rs"

[[bin]]
name = "iggy-bench"
path = "src/bin/iggy_bench.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"


[dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
dotenvy = "0.15"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iggy = "0.6"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
dotenv = "0.15.0"
