[package]
name = "conversation-store"
version = "0.1.0"
edition = "2021"

# ============================
# Binaries
# ============================

[[bin]]
name = "api-server"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "iggy-bench"
path = "src/bin/iggy_bench.rs"

# ============================
# Dependencies
# ============================

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

anyhow = "1.0"
dotenvy = "0.15"

axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

iggy = "0.8.1-edge.4"

bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"

reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
futures-util = "0.3.31"


